tests/snapshots/examples_fixtures/tail_call__debug_return.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/tail_call/debug_return.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/tail_call/debug_return.flx:8:1
  |
8 | print(test(0));
  | ^^^^^^^^^^^^^^^
  | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/tail_call/debug_return.flx:8:1
  |
8 | print(test(0));
  | ^^^^^^^^^^^^^^^
  | --------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 2 errors.
== stdout ==
<not executed>
