tests/snapshots/examples_fixtures/tail_call__deep_recursion.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/tail_call/deep_recursion.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
