tests/snapshots/examples_fixtures/tail_call__verify_tco.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/tail_call/verify_tco.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
